--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
     "@tensorflow/tfjs": "^1.7.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -14,14 +15,16 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "cross-env": "^7.0.2",
+    "notistack": "^0.9.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.0",
     "rxjs": "^6.5.4",
+    "typeface-roboto": "^0.0.75",
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "cross-env BROWSER=none react-app-rewired start",
+    "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "jest",
     "eject": "react-app-rewired eject",
