--- a/web/.prettierrc
+++ b/web/.prettierrc
@@ -1,8 +1,8 @@
 {
   "trailingComma": "es5",
   "tabWidth": 2,
-  "semi": true,
-  "singleQuote": false,
+  "semi": false,
+  "singleQuote": true,
   "endOfLine": "lf",
   "useTabs": false,
   "bracketSpacing": true
