--- a/web/package.json
+++ b/web/package.json
@@ -14,11 +14,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.3",
     "cross-env": "^7.0.2",
     "normalize.css": "^8.0.1",
     "notistack": "^0.9.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.9.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "rxjs": "^6.5.4",
     "typeface-roboto": "^0.0.75",
