--- a/web/package.json
+++ b/web/package.json
@@ -11,12 +11,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/chrome": "^0.0.102",
+    "@types/faker": "^4.1.11",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
     "cross-env": "^7.0.2",
+    "faker": "^4.1.0",
     "normalize.css": "^8.0.1",
     "notistack": "^0.9.9",
     "react": "^16.13.1",
@@ -59,7 +61,7 @@
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "@typescript-eslint/typescript-estree": "^2.25.0",
-    "babel-jest": "^25.2.3",
+    "babel-jest": "^24.9.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.0",
