--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.0.0-beta.41",
     "@emotion/core": "^10.0.28",
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
@@ -19,6 +20,8 @@
     "@types/react-router-dom": "^5.1.3",
     "cross-env": "^7.0.2",
     "faker": "^4.1.0",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
     "normalize.css": "^8.0.1",
     "notistack": "^0.9.9",
     "react": "^16.13.1",
@@ -38,7 +41,8 @@
     "eject": "react-app-rewired eject",
     "precommit": "lint-staged",
     "prepush": "yarn test",
-    "type": "npx tsc --noEmit"
+    "type": "npx tsc --noEmit",
+    "graphql": "graphql-codegen"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -59,6 +63,11 @@
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
+    "@graphql-codegen/cli": "^1.13.1",
+    "@graphql-codegen/fragment-matcher": "^1.13.1",
+    "@graphql-codegen/typescript": "^1.13.1",
+    "@graphql-codegen/typescript-operations": "^1.13.1",
+    "@graphql-codegen/typescript-react-apollo": "^1.13.1",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "@typescript-eslint/typescript-estree": "^2.25.0",
