Apollo 파일 관리 예시 추가

--- a/web/codegen.yml
+++ b/web/codegen.yml
@@ -17,6 +17,8 @@ generates:
       withHooks: true
       reactApolloVersion: 3
       avoidOptionals: true
+      scalars:
+        File: File
 hooks:
   afterAllFileWrite:
     - prettier --write
