Apollo & IndexedDB 기반 영속 파일시스템 추가

--- a/web/codegen.yml
+++ b/web/codegen.yml
@@ -3,6 +3,7 @@ schema: src/graphql/schema/*.graphql
 documents:
   - src/graphql/query/*.graphql
   - src/graphql/mutation/*.graphql
+  - src/graphql/subscription/*.graphql
   - src/graphql/fragment/*.graphql
 generates:
   src/graphql/operations.ts:
