--- a/web/package.json
+++ b/web/package.json
@@ -18,10 +18,12 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "@types/uuid": "^7.0.2",
     "cross-env": "^7.0.2",
     "faker": "^4.1.0",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
+    "localforage": "^1.7.3",
     "normalize.css": "^8.0.1",
     "notistack": "^0.9.9",
     "react": "^16.13.1",
@@ -32,7 +34,8 @@
     "react-scripts": "3.4.0",
     "rxjs": "^6.5.4",
     "typeface-roboto": "^0.0.75",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "uuid": "^7.0.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
