--- a/web/codegen.yml
+++ b/web/codegen.yml
@@ -20,6 +20,7 @@ generates:
       avoidOptionals: true
       scalars:
         File: File
+        Blob: Blob
 hooks:
   afterAllFileWrite:
     - prettier --write
