--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@types/faker": "^4.1.11",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/pngjs": "^3.4.2",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
@@ -26,6 +27,7 @@
     "localforage": "^1.7.3",
     "normalize.css": "^8.0.1",
     "notistack": "^0.9.9",
+    "pngjs": "^3.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
