--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -32,5 +32,11 @@ jobs:
       - name: Run Build
         run: yarn build
       
+      - name: Run test
+        run: yarn test
+      
+      - name: Run Type
+        run: yarn type
+      
       - name: Testing Service
         run: yarn global add serve && serve -s build
