--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -7,7 +7,7 @@ on:
     branches: [ develop ]
     
 jobs:
-  build:
+  Tests:
     runs-on: ubuntu-latest
 
     strategy:
@@ -41,8 +41,4 @@ jobs:
       
       - name: Run Type
         run: yarn type
-        working-directory: ./web
-      
-      - name: Testing Service
-        run: yarn global add serve && serve -s build
         working-directory: ./web
