--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,11 +1,11 @@
-name: Linux-Build
+name: build
 
 on:
   push:
-    branches: [ develop ]
+    branches: [develop]
   pull_request:
-    branches: [ develop ]
-    
+    branches: [develop]
+
 jobs:
   Tests:
     runs-on: ubuntu-latest
@@ -30,17 +30,11 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GPR_AUTH_TOKEN }}
           CI: true
-      
+
       - name: Run Type
         run: yarn type
         working-directory: ./web
-      
+
       - name: Run Test(Jest)
         run: yarn test
         working-directory: ./web
-      
-      - name: Run Build
-        run: yarn build
-        working-directory: ./web
-      
-      
