--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,14 @@
-name: Windows-Build
+name: build
 
 on:
   push:
-    branches: [ develop ]
+    branches: [develop]
   pull_request:
-    branches: [ develop ]
+    branches: [develop]
 
 jobs:
   Tests:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
@@ -30,14 +30,6 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GPR_AUTH_TOKEN }}
           CI: true
-
-      - name: Run Type
-        run: yarn type
-        working-directory: ./web
-
-      - name: Run Test(Jest)
-        run: yarn test
-        working-directory: ./web
 
       - name: Run Build
         run: yarn build
