--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,18 +10,17 @@ jobs:
   Tests:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [12.x]
-
     steps:
       - uses: actions/checkout@v1
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Cache dependencies
+        uses: actions/cache@v1
         with:
-          node-version: ${{ matrix.node-version }}
-          registry-url: "https://npm.pkg.github.com"
+          path: node_modules
+          key: ${{ runner.OS }}-build-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.OS }}-build-
+            ${{ runner.OS }}-
 
       - name: Install dependencies
         run: |
@@ -31,6 +30,6 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.GPR_AUTH_TOKEN }}
           CI: true
 
-      - name: Run Build
+      - name: Build
         run: yarn build
         working-directory: ./web
