--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,8 @@ jobs:
 
       - name: Cache dependencies
         uses: actions/cache@v1
-        working-directory: ./web
         with:
-          path: node_modules
+          path: web/node_modules
           key: ${{ runner.OS }}-build-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.OS }}-build-
