테스트 되지 않은 코드 커버리지 추가

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,12 +41,8 @@ jobs:
       - name: Build
         run: yarn build
         working-directory: ./web
-      
-      - name: Upload coverage to Codecov  
+
+      - name: Upload coverage
         uses: codecov/codecov-action@v1
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
           file: ./web/coverage/clover.xml
-          flags: unittests
-          name: codecov-umbrella
-          fail_ci_if_error: true
