--- a/web/package.json
+++ b/web/package.json
@@ -84,7 +84,9 @@
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
+    "fake-indexeddb": "^3.0.0",
     "husky": "^4.2.3",
+    "jest-localstorage-mock": "^2.4.0",
     "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
     "react-app-rewired": "^2.1.5",
