--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "faker": "^4.1.0",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
+    "immer": "^6.0.2",
     "localforage": "^1.7.3",
     "normalize.css": "^8.0.1",
     "notistack": "^0.9.9",
@@ -39,6 +40,7 @@
     "redux": "^4.0.5",
     "rxjs": "^6.5.4",
     "typeface-roboto": "^0.0.75",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^3.8.3",
     "uuid": "^7.0.2"
   },
@@ -68,13 +70,13 @@
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
-    "@types/react-redux": "^7.1.7",
     "@graphql-codegen/add": "^1.13.1",
     "@graphql-codegen/cli": "^1.13.1",
     "@graphql-codegen/fragment-matcher": "^1.13.1",
     "@graphql-codegen/typescript": "^1.13.1",
     "@graphql-codegen/typescript-operations": "^1.13.1",
     "@graphql-codegen/typescript-react-apollo": "^1.13.1",
+    "@types/react-redux": "^7.1.7",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.26.0",
     "@typescript-eslint/typescript-estree": "^2.25.0",
