Add eslint setting

--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -2,7 +2,8 @@
   "extends": ["airbnb", "react-app"],
   "rules": {
     "semi": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "import/extensions": ["never"]
   },
   "settings": {
     "import/parsers": {
