--- a/web/package.json
+++ b/web/package.json
@@ -86,10 +86,13 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-config-react-app": "^5.2.1",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
+    "fake-indexeddb": "^3.0.0",
     "husky": "^4.2.3",
+    "jest-localstorage-mock": "^2.4.0",
     "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
     "react-app-rewired": "^2.1.5",
