--- a/web/package.json
+++ b/web/package.json
@@ -38,6 +38,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
+    "redux-observable": "^1.2.0",
     "rxjs": "^6.5.4",
     "typeface-roboto": "^0.0.75",
     "typesafe-actions": "^5.1.0",
