--- a/web/package.json
+++ b/web/package.json
@@ -93,6 +93,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "fake-indexeddb": "^3.0.0",
     "husky": "^4.2.3",
+    "jest-canvas-mock": "^2.2.0",
     "jest-localstorage-mock": "^2.4.0",
     "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
