--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/uuid": "^7.0.2",
     "cross-env": "^7.0.2",
+    "cypress-file-upload": "^4.0.4",
     "faker": "^4.1.0",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
@@ -53,7 +54,8 @@
     "precommit": "lint-staged",
     "prepush": "yarn test",
     "type": "npx tsc --noEmit",
-    "graphql": "graphql-codegen"
+    "graphql": "graphql-codegen",
+    "e2e": "cypress open"
   },
   "browserslist": {
     "production": [
@@ -84,6 +86,7 @@
     "babel-jest": "^24.9.0",
     "babel-plugin-emotion": "^10.0.29",
     "customize-cra": "^0.9.1",
+    "cypress": "^4.3.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.0",
