--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
     "immer": "^6.0.2",
+    "konva": "^4.2.2",
     "localforage": "^1.7.3",
     "normalize.css": "^8.0.1",
     "notistack": "^0.9.9",
@@ -33,6 +34,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
+    "react-konva": "^16.12.0-0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
