--- a/web/package.json
+++ b/web/package.json
@@ -45,6 +45,7 @@
     "typeface-roboto": "^0.0.75",
     "typesafe-actions": "^5.1.0",
     "typescript": "^3.8.3",
+    "use-image": "^1.0.5",
     "uuid": "^7.0.2"
   },
   "scripts": {
